--- a/results/2025-05-27-analysis.md
+++ b/results/2025-05-27-analysis.md
@@ -42,28 +42,28 @@ This is distribution related to Films, not about physical logistics
 None are any good.
 
 ## Company Name
-||Perplexity|Syracuse|Linkup|
-|---|---|---|---|
-|ExxonMobil|6|11|7|
-|Borouge|5|0|8|
-|Sigma Chemtrade|0|0|0|
-|HPCL Mittal Energy|7|0|3|
-|L M Goes Embalagens|0|0|0|
-|Westrock|0|0|6|
-|International Paper|5|16|5|
-|Dine Cartonnages|0|0|7|
-|Jiangin Yonghe Packaging Products|0|0|1|
-|Fritz Foss|0|0|0|
-|Husky Technologies|3|2|9|
-|KRC Custom Manufacturing|0|0|5|
-|Braroll Acessorios Industriais|1|0|1|
-|Jindal Films|6|0|6|
-|Klöckner Pentaplast|4|0|6|
-|Entertainment Partners|0|1|3|
-|Universal McCann|5|0|3|
-|Little Island Productions|0|0|7|
-|Commerzbank AG|1|8|7|
-|Linklaters|4|0|1|
+||Perplexity|Syracuse|Linkup|Winner|
+|---|---|---|---|---|
+|ExxonMobil|6|11|7|S|
+|Borouge|5|0|8|L|
+|Sigma Chemtrade|0|0|0|-|
+|HPCL Mittal Energy|7|0|3|P|
+|L M Goes Embalagens|0|0|0|-|
+|Westrock|0|0|6|L|
+|International Paper|5|16|5|S|
+|Dine Cartonnages|0|0|7|-|
+|Jiangin Yonghe Packaging Products|0|0|1|L|
+|Fritz Foss|0|0|0|-|
+|Husky Technologies|3|2|9|L|
+|KRC Custom Manufacturing|0|0|5|L|
+|Braroll Acessorios Industriais|1|0|1|PL|
+|Jindal Films|6|0|6|PL|
+|Klöckner Pentaplast|4|0|6|L|
+|Entertainment Partners|0|1|3|L|
+|Universal McCann|5|0|3|P|
+|Little Island Productions|0|0|7|L|
+|Commerzbank AG|1|8|7|S|
+|Linklaters|4|0|1|P|
 
 Look at a few where there are big differences - judging based on who has the most articles that are relevant.
 
